deploy: 89cb9f0172b4a36a258247f9c2b5efa634adfd03

--- a/Research/index.html
+++ b/Research/index.html
@@ -99,7 +99,7 @@ window.onload = wrap_img;
 
 <details>
 <summary>
-<h3>Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables</h3> 
+<h4>Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables</h4> 
 </summary>    
 
 (Classical Probability Theory)<br />                          
@@ -108,63 +108,79 @@ In applications, the dynamically generated data available to us are always finit
 
 As the next few steps, we have some questions in mind. Is it possible to describe the error in the CLT when we pick a particular discrete random variable instead of describing the typical error? In particular, how do the Diophantine properties of the support of the discrete random variable affect this error? Also, in the absence of uniform error estimates, can we describe the error in weaker norms?    
 </details>
-<hr />
+
 <p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.</p>
 
-<h4 id="error-terms-in-the-local-and-the-central-limit-theorem-for-weakly-dependent-random-variables">Error terms in the local and the central limit theorem for weakly dependent random variables</h4>
-<hr />
-<p>(Dynamical Systems and Stochastic Processes)</p>
+<details>
+<summary> 
+<h4>Error terms in the local and the central limit theorem for weakly dependent random variables</h4>
+</summary>      
+  
+(Dynamical Systems and Stochastic Processes)<br />           
 
-<p>In practice, sequences of experimental observations are never iid! So, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables. As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications – billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.</p>
+In practice, sequences of experimental observations are never iid! So, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables. As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications -- billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.<br />
 
-<p>There are many interesting problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix products. Drawing parallels with random matrix products, can we obtain similar statistical properties for deterministic cocycles with sufficient decorrelation in the base dynamics?</p>
+There are many interesting problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix products. Drawing parallels with random matrix products, can we obtain similar statistical properties for deterministic cocycles with sufficient decorrelation in the base dynamics?  
+</details>
 
 <p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a>.</p>
 
-<hr />
-<h4 id="inferential-statistics-for-dynamically-generated-data">Inferential statistics for dynamically generated data</h4>
-<hr />
-<p>(Statistics and Dynamical Systems)</p>
+<details>
+<summary>
+<h4>Inferential statistics for dynamically generated data</h4> 
+</summary> 
 
-<p>Parameter estimation problems in dynamical systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences. Therefore, it is imperative that we investigate inferential statistics in the context of dynamical systems. However, since dynamically generated data are not iid, it is not straightforward to show the accuracy of statistical techniques. So, there must be rigorous justifications for tools like maximal likelihood methods and the Bootstrap when used in such contexts.                             <br />
-We introduced A generic bootstrap methods for dynamical systems. Under some general conditions, using a novel continuous Edgeworth expansions, we establish not only the consistency but also the higher-order accuracy the bootstrap. We also study the empirical performance of the bootstrap methods using computer simulations.</p>
+(Statistics and Dynamical Systems)<br />                     
 
-<p>This area of research is widely open. For the pivoted bootstrap algorithm to work, either we should know the asymptotic variance or we should be able to readily estimate it. As far as we know, there is no theoretically-justified estimator for the asymptotic variance in a dynamical context. To solve this problem, can we find a good estimator for asymptotic variance? If so, what is the theoretical and empirical behavior of the pivoted bootstrap method based on this estimator?</p>
+Parameter estimation problems in dynamical systems arise naturally in many areas, including machine learning, physics, econometrics, and engineering. Moreover, one should be able to apply tools from statistics to limited dynamically generated data and obtain meaningful inferences. Therefore, it is imperative that we investigate inferential statistics in the context of dynamical systems. However, since dynamically generated data are not iid, it is not straightforward to show the accuracy of statistical techniques. So, there must be rigorous justifications for tools like maximal likelihood methods and the Bootstrap when used in such contexts.<br />                              
+We introduced A generic bootstrap methods for dynamical systems. Under some general conditions, using a novel continuous Edgeworth expansions, we establish not only the consistency but also the higher-order accuracy the bootstrap. We also study the empirical performance of the bootstrap methods using computer simulations.<br />  
+  
+This area of research is widely open. For the pivoted bootstrap algorithm to work, either we should know the asymptotic variance or we should be able to readily estimate it. As far as we know, there is no theoretically-justified estimator for the asymptotic variance in a dynamical context. To solve this problem, can we find a good estimator for asymptotic variance? If so, what is the theoretical and empirical behavior of the pivoted bootstrap method based on this estimator? 
+</details>
 
 <p>Collaborators: <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.</p>
 
-<hr />
-<h4 id="density-estimation-via-robust-normalizing-flows">Density estimation via robust normalizing flows</h4>
-<hr />
-<p>(Machine Learning, Statistics and Probability)</p>
+<details>
+<summary>
+<h4>Density estimation via robust normalizing flows</h4> 
+</summary> 
 
-<p>In the recent years, with the proliferation of machine learning research, modeling and prediction of real-world phenomena have progressed to the next level. There are numerous problems connected to statistics, probability theory, and dynamical systems that can be solved using machine learning. The problem of modeling an unknown probability distribution using sample data is one such example. A Normalizing flow (NF) in machine learning is a supervised learning procedure that determines the probability distribution of sample data by performing a maximum likelihood optimization.</p>
+(Machine Learning, Statistics and Probability)<br />
 
-<p>We introduced a triangular NFs on euclidean spaces using Bernstein polynomials as coupling functions. Our NF model is robust under perturbations, ideal for compactly supported densities and can approximate any density even the ones that are multimodal and have sharp jumps. There are many real-world applications in nonlinear geometries (circular, spherical, etc.); for instance, applications in robotics and molecular modeling. Can we formulate robust normalizing flows in such non-linear geometries?</p>
+In the recent years, with the proliferation of machine learning research, modeling and prediction of real-world phenomena have progressed to the next level. There are numerous problems connected to statistics, probability theory, and dynamical systems that can be solved using machine learning. The problem of modeling an unknown probability distribution using sample data is one such example. A Normalizing flow (NF) in machine learning is a supervised learning procedure that determines the probability distribution of sample data by performing a maximum likelihood optimization.<br />
+
+We introduced a triangular NFs on euclidean spaces using Bernstein polynomials as coupling functions. Our NF model is robust under perturbations, ideal for compactly supported densities and can approximate any density even the ones that are multimodal and have sharp jumps. There are many real-world applications in nonlinear geometries (circular, spherical, etc.); for instance, applications in robotics and molecular modeling. Can we formulate robust normalizing flows in such non-linear geometries?
+</details>
 
 <p>Collaborators: <a href="https://scholar.google.com/citations?user=-j0m9aMAAAAJ&amp;hl=en">Sameera Ramasinghe</a>.</p>
 
-<hr />
-<h4 id="error-terms-in-the-large-deviations-for-weakly-dependent-random-variables">Error terms in the large deviations for weakly dependent random variables</h4>
-<hr />
-<p>(Dynamical Systems and Stochastic Processes)</p>
+<details>
 
-<p>For parabolic PDEs (with non-degeneracy assumptions) the fundamental solution is the transition density of the related diffusion process. Therefore, studying the long-term behaviour of fundamental solutions is the same as studying asymptotics of Markov probability densities. For a reasonable analysis, one must obtain LDPs which describe the solution at linear distances from the effective drift. A finer analysis is possible if higher order asymptotics is available. We introduced the required asymptotic expansions for probability distribution functions.</p>
+<h4> Error terms in the large deviations for weakly dependent random variables  
+&lt;/summary&gt;
+  
+(Dynamical Systems and Stochastic Processes)<br />    
 
-<p>The first term of the large deviation asymptotics of the density of a branching process is obtained in a work of Hebbar, Koralov and Nolan. Is it possible to derive higher order expansions for densities of Markov processes? Moreover, our results do not apply to lattice valued processes but techniques for lattice-valued case in our previous work extend to this setting naturally. So, is it possible to obtain similar results in the lattice-valued case?</p>
+For parabolic PDEs (with non-degeneracy assumptions) the fundamental solution is the transition density of the related diffusion process. Therefore, studying the long-term behaviour of fundamental solutions is the same as studying asymptotics of Markov probability densities. For a reasonable analysis, one must obtain LDPs which describe the solution at linear distances from the effective drift. A finer analysis is possible if higher order asymptotics is available. We introduced the required asymptotic expansions for probability distribution functions.<br />   
 
-<p>Collaborators: <a href="https://sites.google.com/view/pratimahebbar">Pratima Hebbar</a>.</p>
+The first term of the large deviation asymptotics of the density of a branching process is obtained in a work of Hebbar, Koralov and Nolan. Is it possible to derive higher order expansions for densities of Markov processes? Moreover, our results do not apply to lattice valued processes but techniques for lattice-valued case in our previous work extend to this setting naturally. So, is it possible to obtain similar results in the lattice-valued case?    
+&lt;/details&gt;
 
-<hr />
-<h4 id="statistical-properties-of-mostly-expanding-fast-slow-partially-hyperbolic-systems">Statistical properties of mostly expanding fast-slow partially hyperbolic systems</h4>
-<hr />
-<p>(Smooth Ergodic Theory)</p>
+Collaborators: [Pratima Hebbar](https://sites.google.com/view/pratimahebbar).     
 
-<p>When systems are partially hyperbolic, as demonstrated in the series of recent influential work of De Simoi, Liverani and coauthors, the study of statistical properties becomes challenging. They demonstrate metastable behaviour in a deterministic setting for the first time by considering an open class of fast-slow partially hyperbolic systems with mostly contracting centre directions. They also study the existence of SRB measures, their rate of decay of correlations, LLTs and LDPs.</p>
+<details>
+<summary>
+<h4>Statistical properties of mostly expanding fast-slow partially hyperbolic systems</h4>
+</summary>
 
-<p>There are some interesting questions related that require further exploration. What statistical properties are retained if the fast-slow partially hyperbolic systems considered there have mostly expanding centre directions? In particular, what conditions guarantee the existence of SRB measures and do they have exponential decay of correlations?</p>
+(Smooth Ergodic Theory)<br />
 
-<p>Collaborators: <a href="http://www.math.toronto.edu/jacopods/">Jacopo De Simoi</a>.</p>
+When systems are partially hyperbolic, as demonstrated in the series of recent influential work of De Simoi, Liverani and coauthors, the study of statistical properties becomes challenging. They demonstrate metastable behaviour in a deterministic setting for the first time by considering an open class of fast-slow partially hyperbolic systems with mostly contracting centre directions. They also study the existence of SRB measures, their rate of decay of correlations, LLTs and LDPs.<br />       
+There are some interesting questions related that require further exploration. What statistical properties are retained if the fast-slow partially hyperbolic systems considered there have mostly expanding centre directions? In particular, what conditions guarantee the existence of SRB measures and do they have exponential decay of correlations?   
+</details>
+
+Collaborators: [Jacopo De Simoi](http://www.math.toronto.edu/jacopods/).
+</h4></details>
 
       </div>
     </main><footer class="site-footer h-card">
