deploy: 8657a2d46c7f6c70002fcc4bffce72dae8358145

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -87,10 +87,11 @@ window.onload = wrap_img;
 
 <p>In this day and age, Social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
 
-<p>youtube: <a href="https://www.youtube.com/watch?v=GBrp8-JGOQw">අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers</a></p>
+<ul>
+  <li>අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers</li>
+</ul>
 
-<iframe width="640" height="480" src="https://www.youtube.com/watch?v=GBrp8-JGOQw" frameborder="0" allow="encrypted-media" allowfullscreen="">
-</iframe>
+<p><a href="https://www.youtube.com/watch?v=GBrp8-JGOQw"><img src="https://img.youtube.com/vi/UmX4kyB2wfg/0.jpg" alt="IMAGE_ALT" /></a></p>
 
 <p>youtube: <a href="https://www.youtube.com/watch?v=tCJ-_bU4BS0">විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?</a></p>
 
