--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -88,14 +88,15 @@ window.onload = wrap_img;
 <p>In this day and age, Social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
 
 <ul>
-  <li>
-    <p>අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers    <br />
-<a href="https://www.youtube.com/watch?v=GBrp8-JGOQw"><img src="https://img.youtube.com/vi/GBrp8-JGOQw/0.jpg" alt="IMAGE_ALT" /></a></p>
-  </li>
-  <li>
-    <p>විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?  <br />
-<a href="https://www.youtube.com/watch?v=tCJ-_bU4BS0"><img src="https://img.youtube.com/vi/tCJ-_bU4BS0/0.jpg" alt="IMAGE_ALT" /></a></p>
-  </li>
+  <li>අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers    <br />
+<a href="https://www.youtube.com/watch?v=GBrp8-JGOQw"><img src="https://img.youtube.com/vi/GBrp8-JGOQw/0.jpg" alt="IMAGE_ALT" /></a></li>
+</ul>
+
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=GBrp8-JGOQw" target="_blank"><img src="https://img.youtube.com/vi/GBrp8-JGOQw/0.jpg" width="240" height="180" border="10" /></a></p>
+
+<ul>
+  <li>විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?  <br />
+<a href="https://www.youtube.com/watch?v=tCJ-_bU4BS0"><img src="https://img.youtube.com/vi/tCJ-_bU4BS0/0.jpg" alt="IMAGE_ALT" /></a></li>
 </ul>
 
       </div>
