deploy: 43cd7ae04d9771f4e52fd36c245bf95dd3e906a4

--- a/Outreach/index.html
+++ b/Outreach/index.html
@@ -87,17 +87,13 @@ window.onload = wrap_img;
 
 <p>In this day and age, Social media can be used for outreach activities in an extremely effective way. Since I am passionate about popularizing higher mathematics and improving mathematics education in Sri Lanka, I welcomed the opportunities to collaborate with two Sri Lankan YouTube content creators Fadil Iqbal of <a href="https://www.youtube.com/c/IQLabs">IQ Labs</a> and Ashan Ariyawansa of <a href="https://www.youtube.com/c/NCAstronomy/">NC Astronomy</a>. The collaboration with Fadil is on-going and we plan to have casual discussions about many more advanced math topics in the future.</p>
 
-<ul>
-  <li>අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers    <br />
-<a href="https://www.youtube.com/watch?v=GBrp8-JGOQw"><img src="https://img.youtube.com/vi/GBrp8-JGOQw/0.jpg" alt="IMAGE_ALT" /></a></li>
-</ul>
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=GBrp8-JGOQw" target="_blank"><img align="left" src="https://img.youtube.com/vi/GBrp8-JGOQw/maxresdefault.jpg" caption="අතාත්වික සංඛ්‍යා වල ඉතිහාසය - The History of Complex Numbers" width="320" height="180" border="10" /></a>  <a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=tCJ-_bU4BS0" target="_blank"><img align="center" src="https://img.youtube.com/vi/tCJ-_bU4BS0/maxresdefault.jpg" caption="විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?" width="320" height="180" border="10" /></a></p>
 
-<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=GBrp8-JGOQw" target="_blank"><img src="https://img.youtube.com/vi/GBrp8-JGOQw/0.jpg" width="480" height="360" border="5" /></a></p>
-
-<ul>
-  <li>විද්‍යාඥයෙක් වෙන්නෙ කොහොමද? - How to Become a Scientist?  <br />
-<a href="https://www.youtube.com/watch?v=tCJ-_bU4BS0"><img src="https://img.youtube.com/vi/tCJ-_bU4BS0/0.jpg" alt="IMAGE_ALT" /></a></li>
-</ul>
+<!---
+<iframe style="display: inline-block;" width="320" height="180" src="https://www.youtube.com/embed/tCJ-_bU4BS0" frameborder="0" allowfullscreen></iframe>
+[![IMAGE_ALT](https://img.youtube.com/vi/tCJ-_bU4BS0/0.jpg)](https://www.youtube.com/watch?v=tCJ-_bU4BS0)
+1280 x 720 is the dimensions of maxresdefault thumbnails
+-->
 
       </div>
     </main><footer class="site-footer h-card">
