--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ search_exclude: true
 
 
 #### **Junior Visitor**
-Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg"> 
+Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg"><br>        
 Scuola Normale Superiore        
 Piazza dei Cavalieri, 3           
 Pisa PI 56100, Italy      
