--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
-<p>Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg" /> 
+<p>Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg" /><br />      <br />
 Scuola Normale Superiore      <br />
 Piazza dei Cavalieri, 3         <br />
 Pisa PI 56100, Italy</p>
