--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ search_exclude: true
 
 
 #### **Junior Visitor**
-Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg"><br>        
+Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg">         
 Scuola Normale Superiore        
 Piazza dei Cavalieri, 3           
 Pisa PI 56100, Italy      
@@ -21,7 +21,8 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 (August 2018)      
                     
 - BSc in Mathematics - University of Colombo                                     
-(January 2014)    
-
----              
+(January 2014)
+<br>
+<br>
+<br>
 ### Blog Posts
