deploy: 1f95013678cb1e9d293e119210a24ae36ea86c84

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
-<p>Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg" /><br />      <br />
+<p>Centro di Ricerca Matematica Ennio De Giorgi      <img align="right" src="images/kasun.jpg" />       <br />
 Scuola Normale Superiore      <br />
 Piazza dei Cavalieri, 3         <br />
 Pisa PI 56100, Italy</p>
@@ -105,12 +105,13 @@ Pisa PI 56100, Italy</p>
   </li>
   <li>
     <p>BSc in Mathematics - University of Colombo                                   <br />
-(January 2014)</p>
+(January 2014)
+<br />
+<br />
+<br /></p>
+    <h3 id="blog-posts">Blog Posts</h3>
   </li>
 </ul>
-
-<hr />
-<h3 id="blog-posts">Blog Posts</h3>
 
 
 
