deploy: ba5a14ecc789219d29382948395dce427df5ae4a

--- a/Research/index.html
+++ b/Research/index.html
@@ -98,6 +98,18 @@ window.onload = wrap_img;
 <p>Below, I discuss some of my research interests, the motivation behind them and the collaborators I work with. If you find the problems interesting and would like to discuss, don’t hesitate to write to me.</p>
 
 <details open="">
+<summary><b>Error terms in the local and the central limit theorem for weakly dependent random variables</b></summary>      
+  
+(Dynamical Systems and Stochastic Processes)<br /><br />         
+
+In practice, sequences of experimental observations are never iid! So, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables. As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications -- billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.<br /><br /> 
+
+There are many interesting problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix products. Drawing parallels with random matrix products, can we obtain similar statistical properties for deterministic cocycles with sufficient decorrelation in the base dynamics?  
+</details>
+
+<p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a>.<br /> <br /></p>
+
+<details>
 <summary><b>Extension of the classical theory of Edgeworth expansions to non-lattice discrete random variables</b></summary>    
 
 (Classical Probability Theory)<br /><br />                     
@@ -110,19 +122,7 @@ As the next few steps, we have some questions in mind. Is it possible to describ
 <p>Collaborators: <a href="https://www.math.umd.edu/~dolgop/">Dmitry Dolgopyat</a>.<br /><br /></p>
 
 <details>
-<summary>Error terms in the local and the central limit theorem for weakly dependent random variables</summary>      
-  
-(Dynamical Systems and Stochastic Processes)<br /><br />         
-
-In practice, sequences of experimental observations are never iid! So, we introduced a general theory of Edgeworth expansions for weakly dependent (possibly unbounded) random variables. As a direct application of this theory, we obtain error estimates of the CLTs for a large class of hyperbolic dynamical systems and Markov chains. The hyperbolic systems that we discuss like Sinai billiards and piecewise expanding maps are natural models in many applications -- billiard models in optics, acoustics and classical mechanics, and expanding maps in random number generators, biological and medical models to name a few.<br /><br /> 
-
-There are many interesting problems in this direction. There are interesting examples of non-Gaussian stable laws in dynamical systems. Is it possible to describe the error terms in other stable laws? Earlier, we were able to obtain exact limit theorems for random matrix products. Drawing parallels with random matrix products, can we obtain similar statistical properties for deterministic cocycles with sufficient decorrelation in the base dynamics?  
-</details>
-
-<p>Collaborators: <a href="https://www.mat.uniroma2.it/~liverani/">Carlangelo Liverani</a>, <a href="http://lmba.math.univ-brest.fr/perso/francoise.pene/">Françoise Pène</a>.<br /> <br /></p>
-
-<details>
-<summary>Inferential statistics for dynamically generated data</summary>                    
+<summary><b>Inferential statistics for dynamically generated data</b></summary>                    
   
 (Statistics and Dynamical Systems)<br /><br />                     
 
@@ -135,7 +135,7 @@ This area of research is widely open. For the pivoted bootstrap algorithm to wor
 <p>Collaborators: <a href="https://sites.google.com/site/nzoupersonal/home">Nan Zou</a>.<br /> <br /></p>
 
 <details>        
-<summary>Density estimation via robust normalizing flows</summary> 
+<summary><b>Density estimation via robust normalizing flows</b></summary> 
 
 (Machine Learning, Statistics and Probability)<br /><br /> 
 
@@ -147,7 +147,7 @@ We introduced a triangular NFs on euclidean spaces using Bernstein polynomials a
 <p>Collaborators: <a href="https://scholar.google.com/citations?user=-j0m9aMAAAAJ&amp;hl=en">Sameera Ramasinghe</a>.<br /> <br /></p>
 
 <details>            
-<summary>Error terms in the large deviations for weakly dependent random variables</summary>             
+<summary><b>Error terms in the large deviations for weakly dependent random variables</b></summary>             
         
 (Dynamical Systems and Stochastic Processes)<br /><br />     
 
@@ -159,7 +159,7 @@ The first term of the large deviation asymptotics of the density of a branching 
 <p>Collaborators: <a href="https://sites.google.com/view/pratimahebbar">Pratima Hebbar</a>.<br /> <br /></p>
 
 <details>
-<summary>Statistical properties of mostly expanding fast-slow partially hyperbolic systems</summary>
+<summary><b>Statistical properties of mostly expanding fast-slow partially hyperbolic systems</b></summary>
 
 (Smooth Ergodic Theory)<br /><br />              
                   
