deploy: 29e7844711a7225466cf56259cd069eef23a412c

--- a/index.html
+++ b/index.html
@@ -105,14 +105,11 @@ Pisa PI 56100, Italy</p>
   </li>
   <li>
     <p>BSc in Mathematics - University of Colombo                                   <br />
-(January 2014)
-<br />
-<br /></p>
-    <h3 id="blog-posts">Blog Posts</h3>
-    <hr />
-    <p><br /></p>
+(January 2014)</p>
   </li>
 </ul>
+
+<h3 id="blog-posts">Blog Posts</h3>
 
 
 
