--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@ Pisa PI 56100, Italy
 Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a>     
 
 #### **Past Employment**
-- Postdoctoral Fellow - University of Toronto                
-(August 2018 - July 2021)
+- Postdoctoral Fellow - University of Toronto (August 2018 - July 2021)
 	
 #### **Education**
-- PhD in Mathematics - University of Maryland                   
-(August 2018)      
+- PhD in Mathematics - University of Maryland (August 2018)      
                     
-- BSc in Mathematics - University of Colombo                                     
-(January 2014)       
+- BSc in Mathematics - University of Colombo (January 2014)       
 
 ### Blog Posts        
