deploy: 3a6963da6bd842d7c75fa0f9667dcd3653a22029

--- a/index.html
+++ b/index.html
@@ -93,19 +93,16 @@ Pisa PI 56100, Italy</p>
 
 <h4 id="past-employment"><strong>Past Employment</strong></h4>
 <ul>
-  <li>Postdoctoral Fellow - University of Toronto              <br />
-(August 2018 - July 2021)</li>
+  <li>Postdoctoral Fellow - University of Toronto (August 2018 - July 2021)</li>
 </ul>
 
 <h4 id="education"><strong>Education</strong></h4>
 <ul>
   <li>
-    <p>PhD in Mathematics - University of Maryland                 <br />
-(August 2018)</p>
+    <p>PhD in Mathematics - University of Maryland (August 2018)</p>
   </li>
   <li>
-    <p>BSc in Mathematics - University of Colombo                                   <br />
-(January 2014)</p>
+    <p>BSc in Mathematics - University of Colombo (January 2014)</p>
   </li>
 </ul>
 
