--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 layout: home
 search_exclude: true
 ---
-
-
+   
 #### **Junior Visitor**
 Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->             
 Scuola Normale Superiore        
 Piazza dei Cavalieri, 3           
-Pisa PI 56100, Italy      
+Pisa PI 56100, Italy         
 
 Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it</a>     
 
@@ -16,8 +15,9 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 - Postdoctoral Fellow - University of Toronto (August 2018 - July 2021)
 	
 #### **Education**
-- PhD in Mathematics - University of Maryland (August 2018)      
-                    
-- BSc in Mathematics - University of Colombo (January 2014)       
+- PhD in Mathematics - University of Maryland (August 2018)                  
+- BSc in Mathematics - University of Colombo (January 2014)  
 
+#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV.<br>         
+          
 ### Blog Posts        
