deploy: 27edc6d8a0ba5efaa960e96259ed9a3a8274216e

--- a/index.html
+++ b/index.html
@@ -98,13 +98,11 @@ Pisa PI 56100, Italy</p>
 
 <h4 id="education"><strong>Education</strong></h4>
 <ul>
-  <li>
-    <p>PhD in Mathematics - University of Maryland (August 2018)</p>
-  </li>
-  <li>
-    <p>BSc in Mathematics - University of Colombo (January 2014)</p>
-  </li>
+  <li>PhD in Mathematics - University of Maryland (August 2018)</li>
+  <li>BSc in Mathematics - University of Colombo (January 2014)</li>
 </ul>
+
+<h4 id="here-is-my-complete-cv"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV.<br /></h4>
 
 <h3 id="blog-posts">Blog Posts</h3>
 
