--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 layout: home
 search_exclude: true
 ---
-   
 #### **Junior Visitor**
 Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->             
 Scuola Normale Superiore        
@@ -16,8 +15,10 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 	
 #### **Education**
 - PhD in Mathematics - University of Maryland (August 2018)                  
-- BSc in Mathematics - University of Colombo (January 2014)  
+- BSc in Mathematics - University of Colombo (January 2014)      
+<br>
 
-#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV.<br>         
+#### I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV.      
+<br><br>         
           
-### Blog Posts        
+#### **Blog Posts**       
