deploy: a66adfaac62b3cda9a95e09085d7fdfdd6b04722

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@ Pisa PI 56100, Italy</p>
 <h4 id="education"><strong>Education</strong></h4>
 <ul>
   <li>PhD in Mathematics - University of Maryland (August 2018)</li>
-  <li>BSc in Mathematics - University of Colombo (January 2014)</li>
+  <li>BSc in Mathematics - University of Colombo (January 2014)    <br />
+<br /></li>
 </ul>
 
-<h4 id="here-is-my-complete-cv"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV.<br /></h4>
+<h4 id="i-am-a-mathematician-math-educator-data-science--machine-learning-enthusiast-here-is-my-complete-cv">I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast. <a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV.</h4>
+<p><br /><br /></p>
 
-<h3 id="blog-posts">Blog Posts</h3>
+<h4 id="blog-posts"><strong>Blog Posts</strong></h4>
 
 
 
