--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 - BSc in Mathematics - University of Colombo (January 2014)      
 <br>
 
-#### I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV.      
-<br><br>         
+#### I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV.  
+I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV. 
+Below you will find some blog posts related to the computational side of mathematics and statistics, mostly based on <i class="fab fa-python"></i> python, julia and <i class="fa-brands fa-r-project"></i> R.    
+<br><br>                 
           
 #### **Blog Posts**       
