deploy: 01b81b91d9ad2697d98e073aed8ada1d8291962b

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ Pisa PI 56100, Italy</p>
 </ul>
 
 <h4 id="i-am-a-mathematician-math-educator-data-science--machine-learning-enthusiast-here-is-my-complete-cv">I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast. <a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV.</h4>
-<p><br /><br /></p>
+<p>I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast. <a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV. 
+Below you will find some blog posts related to the computational side of mathematics and statistics, mostly based on <i class="fab fa-python"></i> python, julia and <i class="fa-brands fa-r-project"></i> R.  <br />
+<br /><br /></p>
 
 <h4 id="blog-posts"><strong>Blog Posts</strong></h4>
 
