--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 layout: home
 search_exclude: true
 ---
-#### **Junior Visitor**
+#### I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. 
+
+#### **Current Employment*
+Junior Visitor 
 Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->             
 Scuola Normale Superiore        
 Piazza dei Cavalieri, 3           
@@ -14,13 +17,12 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 - Postdoctoral Fellow - University of Toronto (August 2018 - July 2021)
 	
 #### **Education**
-- PhD in Mathematics - University of Maryland (August 2018)                  
+- PhD in Mathematics - University of Maryland (August 2018)   
+- MA in Mathematics - University of Maryland (December 2016)   
 - BSc in Mathematics - University of Colombo (January 2014)      
 <br>
 
-#### I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV.  
-I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV. 
-Below you will find some blog posts related to the computational side of mathematics and statistics, mostly based on <i class="fab fa-python"></i> python, julia and <i class="fa-brands fa-r-project"></i> R.    
+#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV and my Linkedin profile is [this](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based &#f3e2 python, julia or &#f4f7 R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.
 <br><br>                 
           
 #### **Blog Posts**       
