--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h4 id="junior-visitor"><strong>Junior Visitor</strong></h4>
-<p>Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->           <br />
+        <div class="home"><h4 id="i-am-a-mathematician-math-educator-data-science--machine-learning-enthusiast">I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast.</h4>
+
+<h4 id="current-employment"><em>*Current Employment</em></h4>
+<p>Junior Visitor 
+Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->           <br />
 Scuola Normale Superiore      <br />
 Piazza dei Cavalieri, 3         <br />
 Pisa PI 56100, Italy</p>
@@ -99,14 +102,13 @@ Pisa PI 56100, Italy</p>
 <h4 id="education"><strong>Education</strong></h4>
 <ul>
   <li>PhD in Mathematics - University of Maryland (August 2018)</li>
+  <li>MA in Mathematics - University of Maryland (December 2016)</li>
   <li>BSc in Mathematics - University of Colombo (January 2014)    <br />
 <br /></li>
 </ul>
 
-<h4 id="i-am-a-mathematician-math-educator-data-science--machine-learning-enthusiast-here-is-my-complete-cv">I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast. <a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV.</h4>
-<p>I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast. <a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV. 
-Below you will find some blog posts related to the computational side of mathematics and statistics, mostly based on <i class="fab fa-python"></i> python, julia and <i class="fa-brands fa-r-project"></i> R.  <br />
-<br /><br /></p>
+<h4 id="here-is-my-complete-cv-and-my-linkedin-profile-is-this-below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-f3e2-python-julia-or-f4f7-r-during-my-free-time-i-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV and my Linkedin profile is <a href="https://www.linkedin.com/in/abkfernando/">this</a>. Below you will find blog posts related to the computational side of mathematics and statistics based &amp;#f3e2 python, julia or &amp;#f4f7 R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.</h4>
+<p><br /><br /></p>
 
 <h4 id="blog-posts"><strong>Blog Posts</strong></h4>
 
