--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ search_exclude: true
 ---
 #### I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. 
 
-#### **Current Employment*
-Junior Visitor 
+#### **Current Employment**
+Junior Visitor       
 Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->             
 Scuola Normale Superiore        
 Piazza dei Cavalieri, 3           
@@ -22,7 +22,7 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 - BSc in Mathematics - University of Colombo (January 2014)      
 <br>
 
-#### [Here](otherfiles/KasunFernandoCV.pdf) is my complete CV and my Linkedin profile is [this](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based &#f3e2 python, julia or &#f4f7 R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.
+#### [**Here**](otherfiles/KasunFernandoCV.pdf) is my complete CV and my Linkedin profile is [**this**](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based &#f3e2; python, julia or &#f4f7; R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.
 <br><br>                 
           
 #### **Blog Posts**       
