deploy: a8d38fff8765a15daac954e9e60f35c88582ee30

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><h4 id="i-am-a-mathematician-math-educator-data-science--machine-learning-enthusiast">I am a Mathematician, Math Educator, Data Science &amp; Machine Learning Enthusiast.</h4>
 
-<h4 id="current-employment"><em>*Current Employment</em></h4>
-<p>Junior Visitor 
+<h4 id="current-employment"><strong>Current Employment</strong></h4>
+<p>Junior Visitor     <br />
 Centro di Ricerca Matematica Ennio De Giorgi      <!-- <img align="right" src="images/kasun.jpg"> -->           <br />
 Scuola Normale Superiore      <br />
 Piazza dei Cavalieri, 3         <br />
@@ -107,7 +107,7 @@ Pisa PI 56100, Italy</p>
 <br /></li>
 </ul>
 
-<h4 id="here-is-my-complete-cv-and-my-linkedin-profile-is-this-below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-f3e2-python-julia-or-f4f7-r-during-my-free-time-i-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram"><a href="otherfiles/KasunFernandoCV.pdf">Here</a> is my complete CV and my Linkedin profile is <a href="https://www.linkedin.com/in/abkfernando/">this</a>. Below you will find blog posts related to the computational side of mathematics and statistics based &amp;#f3e2 python, julia or &amp;#f4f7 R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.</h4>
+<h4 id="here-is-my-complete-cv-and-my-linkedin-profile-is-this-below-you-will-find-blog-posts-related-to-the-computational-side-of-mathematics-and-statistics-based-f3e2-python-julia-or-f4f7-r-during-my-free-time-i-travel-and-do-photography-some-of-these-photos-can-be-found-on-my-instagram"><a href="otherfiles/KasunFernandoCV.pdf"><strong>Here</strong></a> is my complete CV and my Linkedin profile is <a href="https://www.linkedin.com/in/abkfernando/"><strong>this</strong></a>. Below you will find blog posts related to the computational side of mathematics and statistics based &amp;#f3e2; python, julia or &amp;#f4f7; R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.</h4>
 <p><br /><br /></p>
 
 <h4 id="blog-posts"><strong>Blog Posts</strong></h4>
