--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 search_exclude: true
 ---
-#### I am a Mathematician, Math Educator, Data Science & Machine Learning Enthusiast. 
+#### I am a Mathematician, a Math Educator, and a Data Science & Machine Learning Enthusiast. 
 
 #### **Current Employment**
 Junior Visitor       
@@ -22,7 +22,7 @@ Email: <a href="mailto:buddhima.akurugodage@sns.it">buddhima.akurugodage@sns.it<
 - BSc in Mathematics - University of Colombo (January 2014)      
 <br>
 
-#### [**Here**](otherfiles/KasunFernandoCV.pdf) is my complete CV and my Linkedin profile is [**this**](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based &#f3e2; python, julia or &#f4f7; R. During my free time I travel and do photography. Some of these photos can be found on <a href="https://www.instagram.com/kasun.fernando/">my instagram</a>.
+#### [**Here**](otherfiles/KasunFernandoCV.pdf) is my complete CV and my Linkedin profile is [**this**](https://www.linkedin.com/in/abkfernando/). Below you will find blog posts related to the computational side of mathematics and statistics based on python, julia or R. During my free time I travel and do photography. Some of these photos can be found on my [**instagram**](https://www.instagram.com/kasun.fernando/).
 <br><br>                 
           
 #### **Blog Posts**       
